hphp/test/slow/parser/object_creation_in_enum.php.expectf

Fatal error: Expected constant expression for initializer in %s/object_creation_in_enum.php on line 4
